--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dragon-hoard-game",
   "version": "1.0.0",
-  "description": "Dragon's Hoard - AI-powered dragon conversation game",
+  "description": "Dragon's Hoard minigame",
   "dependencies": {
     "node-fetch": "^2.6.7"
   }
